objects/Change_Impact__c.object
<CustomObject>
    <description>TOOLKIT - Custom Object to show the Change Impact</description>
    <fields>
        <fullName>AMS_Variance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please use this field (if applicable)  to describe regional or country specific differences</inlineHelpText>
        <label>Americas Variance</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APJ_Variance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please use this field (if applicable)  to describe regional or country specific differences</inlineHelpText>
        <label>Asia Variance</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned SME</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Impacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefits__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe the pros of the change</inlineHelpText>
        <label>Benefits</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <label>Capability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD 1</fullName>
                </value>
                <value>
                    <fullName>TBD 2</fullName>
                </value>
                <value>
                    <fullName>TBD 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Challenges__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe the cons of the change</inlineHelpText>
        <label>Challenges</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Impact_Score__c</fullName>
        <formula>(value(text(Frequency__c)) + value(text(Degree_Of_Change__c))) * value(text(Strategic_Impact__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Impact Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Impact_Stage__c</fullName>
        <inlineHelpText>Stage of the change impact</inlineHelpText>
        <label>Change Impact Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identified</fullName>
                </value>
                <value>
                    <fullName>Being Validated</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Impact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pick the closest aligned capability</inlineHelpText>
        <label>Change Impact</label>
        <referenceTo>Change_Impact__c</referenceTo>
        <relationshipLabel>Change Impacts</relationshipLabel>
        <relationshipName>Change_Impacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe the current process</inlineHelpText>
        <label>Current State</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Degree_Of_Change__c</fullName>
        <inlineHelpText>5 = High (completely new process / role)
4 = Medium - High (large number of changes to the as-is)
3 = Medium (multiple changes to the as-is)
2 = Low - Medium (small changes to the as-is)
1 = Low (little change to the as-is process)</inlineHelpText>
        <label>Degree Of Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMEA_Variance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please use this field (if applicable)  to describe regional or country specific differences</inlineHelpText>
        <label>EMEA Variance</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Audience_Response__c</fullName>
        <inlineHelpText>Define how the impact will be received among those it affects</inlineHelpText>
        <label>Expected Audience Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <inlineHelpText>5 = Very often (hourly)
4 = Often (once - twice / day)
3 = Occasionally (few times / week)
2 = Rarely (few times a month)
1 = Very Rarely (once or less / month)</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe the new process</inlineHelpText>
        <label>Future State</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_Description__c</fullName>
        <description>Impact Description</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide a detailed description of the change identified</inlineHelpText>
        <label>Impact Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_Id__c</fullName>
        <description>Change Impact Id</description>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Impact Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Individual_Stakeholder_Others__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Individual Stakeholder Others</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Stakeholder__c</fullName>
        <label>Individual Stakeholder</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD 1</fullName>
                </value>
                <value>
                    <fullName>TBD 2</fullName>
                </value>
                <value>
                    <fullName>TBD 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes_for_MOC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please document relevant notes impacting change management solutions</inlineHelpText>
        <label>Notes for Change Management</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Stakeholder__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please use this field (if applicable) to describe any specific change impacts for the other identified stakeholders</inlineHelpText>
        <label>Other Stakeholder Impact Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_For_Removal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Identify the reason for removal (i.e. duplicate, irrelevant, out of scope). If duplicate, please reference the live Change Impact.</inlineHelpText>
        <label>Reason For Removal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Pick the region(s) impacted by the change</inlineHelpText>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Training_Material_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Training Material</label>
        <referenceTo>Training_Material__c</referenceTo>
        <relationshipLabel>Change Impacts</relationshipLabel>
        <relationshipName>Change_Impacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identify the release in which the change occurs</inlineHelpText>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Change Impacts</relationshipLabel>
        <relationshipName>Change_Impacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement_Theme__c</fullName>
        <label>Requirement Theme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD 1</fullName>
                </value>
                <value>
                    <fullName>TBD 2</fullName>
                </value>
                <value>
                    <fullName>TBD 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Impact__c</fullName>
        <inlineHelpText>1.0 - 0.9 = Disables customer support if not executed
0.8 - 0.7 = Could result in customer not being able to receive quality support 
0.6 - 0.5 = Impact on HP &amp; Partners, but not customers
0.4 - 0.3 = No customer impact &amp; minimal impact on HP &amp; Par</inlineHelpText>
        <label>Strategic Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.1</fullName>
                </value>
                <value>
                    <fullName>0.2</fullName>
                </value>
                <value>
                    <fullName>0.3</fullName>
                </value>
                <value>
                    <fullName>0.4</fullName>
                </value>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>0.6</fullName>
                </value>
                <value>
                    <fullName>0.7</fullName>
                </value>
                <value>
                    <fullName>0.8</fullName>
                </value>
                <value>
                    <fullName>0.9</fullName>
                </value>
                <value>
                    <fullName>1.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track_WorkStream__c</fullName>
        <inlineHelpText>Identify the Track/Workstream that the change is aligned to</inlineHelpText>
        <label>Track/WorkStream</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD 1</fullName>
                </value>
                <value>
                    <fullName>TBD 2</fullName>
                </value>
                <value>
                    <fullName>TBD 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrainingMaterial_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Material</label>
        <referenceTo>Training_Material__c</referenceTo>
        <relationshipLabel>Change Impacts (Training Material Object)</relationshipLabel>
        <relationshipName>Change_Impacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Material_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Material</label>
        <referenceTo>Training_Material__c</referenceTo>
        <relationshipLabel>Change Impacts</relationshipLabel>
        <relationshipName>Change_Impacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Stakeholder_Grouping__c</fullName>
        <label>Training Stakeholder Grouping</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD1</fullName>
                </value>
                <value>
                    <fullName>TBD2</fullName>
                </value>
                <value>
                    <fullName>TBD 3</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Of_Change__c</fullName>
        <inlineHelpText>Select one or more areas impacted by this change</inlineHelpText>
        <label>Type Of Change</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Organization Structure</fullName>
                </value>
                <value>
                    <fullName>Policies &amp; Standards</fullName>
                </value>
                <value>
                    <fullName>Process &amp; Behavior</fullName>
                </value>
                <value>
                    <fullName>Roles &amp; Responsibilities</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Tools &amp; Templates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Use Case</label>
        <referenceTo>Use_Case__c</referenceTo>
        <relationshipLabel>Change Impacts</relationshipLabel>
        <relationshipName>Change_Impacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Change Impact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Change Impact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Impacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Reason_for_removal_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Change_Impact_Stage__c, &apos;Removed&apos;),
ISBLANK(Reason_For_Removal__c))</errorConditionFormula>
        <errorDisplayField>Reason_For_Removal__c</errorDisplayField>
        <errorMessage>Reason for Removal is required when Change Impact Stage is set to &apos;Removed&apos;. Please enter details.</errorMessage>
    </validationRules>
</CustomObject>